--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -36,6 +40,7 @@
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.30.1",
     "prop-types": "^15.8.1",
+    "redux-devtools-extension": "^2.13.9",
     "webpack": "^5.73.0"
   },
   "scripts": {
