--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,12 @@
             "error",
             "windows"
         ],
+        "@typescript-eslint/ban-ts-comment": [
+            "error",
+            {
+                "ts-ignore": "allow-with-description"
+            }
+        ],
         "quotes": [
             "error",
             "single"
