--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.43",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@emotion/react": "11.11.0",
+    "@emotion/styled": "11.11.0",
+    "@mui/base": "latest",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.1.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-redux": "8.0.5",
     "redux-persist": "^6.0.0",
-    "sass": "^1.53.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.62.1",
+    "typescript": "^5.0.4",
+    "web-vitals": "^3.3.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.9",
@@ -35,8 +42,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint": "^8.40.0",
+    "eslint-plugin-react": "^7.32.2",
     "prop-types": "^15.8.1",
     "webpack": "^5.73.0"
   },
